<resources>
    <string name="app_name">Tasks</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- BottomNavigation Menu item -->
    <string name="to_do_list_bottom_menu_icon_text">To Do</string>
    <string name="done_list_bottom_menu_icon_text">Done</string>

    <!-- Options Menu -->
    <string name="edit_task_option">Edit Task</string>
    <string name="remove_task_option">Remove Task</string>

    <!-- Create and Update Tasks -->
    <string name="task_title_label">Task Title</string>
    <string name="task_description_label">Task Description</string>
    <string name="enable_notifications_label">Enable Notifications</string>
    <string name="notify_at_label">Notify at</string>
    <string name="repeat_notification_label">Repeat Notification</string>


    <!-- Spinner Meta -->
    <string name="meta_position">meta_position</string>
    <string name="meta_title">meta_title</string>
</resources>
